--- a/css/main.css
+++ b/css/main.css
@@ -22,12 +22,6 @@ body {
     height: 100vh;
 }
 
-.malovich,
-.lines,
-.more-lines {
-    display: none;
-}
-
 .malovich {
     position: absolute;
     top: 22vh;
@@ -45,6 +39,13 @@ body {
     width: 378px;
     height: 484px;
     background-color: FFE9CD;
+}
+
+.malovich,
+.lines,
+.more-lines,
+.grey-rectangle {
+    display: none;
 }
 
 .hero-container {
@@ -70,16 +71,15 @@ p, a {
 
 p {
     margin-bottom: 0;
-    margin-left: 50px;
+    margin-left: 30px;
 }
 
 a {
     padding: 10px 10px;
-    margin-left: 10px;
 }
 
 .contact-links {
-    padding-left: 2rem;
+    padding-left: 1rem;
 }
 
 .contact-links a {
@@ -87,6 +87,11 @@ a {
     text-decoration: none;
     color: #000;
     position: relative;
+    margin-left: 5px;
+}
+
+.contact-links a:first-of-type {
+    margin-left: 0;
 }
 
 h1,
@@ -109,15 +114,16 @@ p {
 
 @media(min-width: 550px) {
     .contact-links {
-        padding-left: 19rem;
+        padding-left: 15rem;
     }
     p {
         padding: 0px 20px 10px 0;
-        margin-left: 140px;
+        margin-left: 100px;
     }
     .malovich,
     .lines,
-    .more-lines {
+    .more-lines,
+    .grey-rectangle {
         display: inline;
     }
 
