--- a/css/main.css
+++ b/css/main.css
@@ -24,10 +24,10 @@ body {
 
 .malovich {
     position: absolute;
-    top: 22vh;
-    left: 35%;
+    top: 24vh;
+    left: 40%;
     width: 360px;
-    height: 460px;
+    height: 400px;
     border: 1px solid #000;
 }
 
@@ -55,7 +55,8 @@ body {
 h1 {
     margin-top: 0;
     margin-left: 20px;
-    font-size: 53px;
+    padding-right: 20px;
+    font-size: 35px;
     max-width: 650px;
 }
 
@@ -75,6 +76,8 @@ p {
 }
 
 a {
+    text-decoration: none;
+    color: #000;
     padding: 10px 10px;
 }
 
@@ -88,6 +91,7 @@ a {
     color: #000;
     position: relative;
     margin-left: 5px;
+    font-weight: 700;
 }
 
 .contact-links a:first-of-type {
@@ -117,8 +121,8 @@ p {
         padding-left: 15rem;
     }
     p {
-        padding: 0px 20px 10px 0;
-        margin-left: 100px;
+        padding: 0px 0px 10px 0;
+        margin-left: 60px;
     }
     .malovich,
     .lines,
@@ -126,5 +130,28 @@ p {
     .grey-rectangle {
         display: inline;
     }
+    h1 {
+        font-size: 40px;
+        padding-right: 0;
+    }
+}
 
+@media (min-width: 750px) {
+    h1 {
+        font-size: 53px;
+    }
+}
+
+.oops a,
+.oops h1 {
+    font-size: 40px;
+    font-family: "DomaineDisplay-Semibold";
+}
+
+.oops a {
+    margin : 0;
+    padding: 0;
+    color: blue;
+    animation: greyscale 3s infinite;
+    -webkit-animation: greyscale 3s infinite;
 }
