--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,8 @@ body {
 
 .outer-container {
     width: 100%;
-    height: 100vh;
+    height: 98vh;
+    overflow-x: hidden;
 }
 
 .malovich {
@@ -63,26 +64,26 @@ h1 {
 p, a {
     background-color: #FFF;
     padding: 10px 20px 10px 0;
-    font-size: 15px;
     font-family: 'Inconsolata';
     line-height: 2;
-    max-width: 450px;
-
 }
 
 p {
+    font-size: 13px;
     margin-bottom: 0;
-    margin-left: 30px;
+    margin-left: 20px;
+    max-width: 330px;
 }
 
 a {
+    font-size: 13px;
     text-decoration: none;
     color: #000;
     padding: 10px 10px;
 }
 
 .contact-links {
-    padding-left: 1rem;
+    padding-left: 10px;
 }
 
 .contact-links a {
@@ -90,7 +91,6 @@ a {
     text-decoration: none;
     color: #000;
     position: relative;
-    margin-left: 5px;
     font-weight: 700;
 }
 
@@ -123,6 +123,11 @@ p {
     p {
         padding: 0px 0px 10px 0;
         margin-left: 60px;
+        max-width: 480px;
+        font-size: 15px;
+    }
+    a {
+        font-size: 15px;
     }
     .malovich,
     .lines,
@@ -139,6 +144,9 @@ p {
 @media (min-width: 750px) {
     h1 {
         font-size: 53px;
+    }
+    p {
+        margin-left: 90px;
     }
 }
 
