--- a/css/main.css
+++ b/css/main.css
@@ -1,154 +1,77 @@
+html {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: "DomaineDisplay-Semibold";
-}
-
-.flex-center {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-}
-
-.outer-container {
-    width: 100%;
-    height: 98vh;
-    overflow-x: hidden;
-}
-
-.malovich {
-    position: absolute;
-    top: 24vh;
-    left: 40%;
-    width: 360px;
-    height: 400px;
-    border: 1px solid #000;
-}
-
-.grey-rectangle {
-    position: absolute;
-    top: 25vh;
-    right: 35%;
-    left: 30%;
-    width: 378px;
-    height: 484px;
-    background-color: FFE9CD;
-}
-
-.malovich,
-.lines,
-.more-lines,
-.grey-rectangle {
-    display: none;
+    margin: 0;
+    min-height: 100vh;
 }
 
 .hero-container {
+    padding: 10% 10px 30px 10px;
+    display: block;
+    margin: 0 auto;
     animation: fadein 2s;
-    max-width: 800px;
+    max-width: 600px;
 }
 
-h1 {
-    margin-top: 0;
-    margin-left: 20px;
-    padding-right: 20px;
-    font-size: 35px;
-    max-width: 650px;
+.hero-container img {
+    display: block;
+    padding-bottom: 20px;
+    position: relative;
+    z-index: -99;
+    margin: 0 auto;
+    max-width: 250px;
+}
+
+.hero-container h1 {
+    font-size: 30px;
+    text-align: center;
+}
+
+.hero-container p {
+    margin-bottom: 30px;
+    font-size: 14px;
 }
 
 p, a {
-    background-color: #FFF;
-    padding: 10px 20px 10px 0;
+    text-align: center;
     font-family: 'Inconsolata';
     line-height: 2;
 }
 
-p {
-    font-size: 13px;
-    margin-bottom: 0;
-    margin-left: 20px;
-    max-width: 330px;
-}
-
-a {
-    font-size: 13px;
-    text-decoration: none;
-    color: #000;
-    padding: 10px 10px;
-}
-
 .contact-links {
-    padding-left: 10px;
+    text-align: center;
+    margin: 0 auto;
+    max-width: 400px;
 }
 
 .contact-links a {
-    background-color: #fff;
-    text-decoration: underline;
+    font-size: 13px;
+    text-decoration: none;
     color: #000;
-    position: relative;
-    font-weight: 700;
+    padding: 0 8px;
+    font-family: "Helvetica Neue";
+    font-weight: 400;
+    font-style: italic;
+    text-transform: uppercase;
+    display: inline;
+    letter-spacing: 0.5px;
 }
 
-.contact-links a:first-of-type {
-    margin-left: 0;
-}
-
-h1,
-p {
-    position: relative;
+.contact-links a:hover {
+    text-decoration: line-through;
 }
 
 .lines {
     position: absolute;
-    top: 29vh;
-    left: 43%;
 }
 
 .more-lines {
     -webkit-filter: grayscale(100%);
     position: absolute;
-    top: 17vh;
-    left: 29%;
-}
-
-@media(min-width: 550px) {
-    .contact-links {
-        padding-left: 80px;
-    }
-    p {
-        padding: 0px 0px 10px 0;
-        margin-left: 60px;
-        max-width: 460px;
-        font-size: 15px;
-    }
-    a {
-        font-size: 15px;
-    }
-    .malovich,
-    .lines,
-    .more-lines,
-    .grey-rectangle {
-        display: inline;
-    }
-    h1 {
-        font-size: 40px;
-        padding-right: 0;
-    }
-}
-
-@media (min-width: 750px) {
-    h1 {
-        font-size: 53px;
-    }
-    p {
-        margin-left: 90px;
-    }
 }
 
 .oops a,
@@ -163,4 +86,19 @@ p {
     color: blue;
     animation: greyscale 3s infinite;
     -webkit-animation: greyscale 3s infinite;
+}
+
+@media (min-width: 550px) {
+    .hero-container {
+        padding: 125px 20px 30px 20px;
+    }
+    .hero-container h1 {
+        font-size: 46px;
+    }
+}
+
+@media (min-width: 750px) {
+    .hero-container h1 {
+        font-size: 53px;
+    }
 }
