--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ body {
     position: relative;
     z-index: -99;
     margin: 0 auto;
-    max-width: 250px;
+    max-width: 200px;
 }
 
 .hero-container h1 {
@@ -94,6 +94,9 @@ p, a {
     }
     .hero-container h1 {
         font-size: 46px;
+    }
+    .hero-container img {
+        max-width: 300px;
     }
 }
 
