Hopefully fix fonts

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,4 +1,6 @@
 @font-face {
-    font-family: "DomaineDisplay-Semibold";
-    src: url(/fonts/DomaineDisplay-Semibold.ttf);
+  font-family: 'heading';
+  src:url('../fonts/DomaineDisplay-Semibold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
