--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'heading';
+  font-family: "heading";
   src:url('../fonts/DomaineDisplay-Semibold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
