--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    font-family: "heading";
+    font-family: "heading", "cursive";
     margin: 0;
     min-height: 100vh;
 }
@@ -38,7 +38,7 @@ body {
 
 p, a {
     text-align: center;
-    font-family: "Inconsolata";
+    font-family: 'Inconsolata';
     line-height: 2;
 }
 
