Replace percentages with pixel values

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ p {
 .hero-container h1 {
     display: inline-block;
     padding: 0 8px 4px 8px;
-    margin-top: 140px;
+    margin-top: 200px;
     background-color: #FFF;
 }
 
@@ -30,7 +30,7 @@ p {
     line-height: 1.9;
     margin: 0 auto 0 58%;
     max-width: 290px;
-    padding: 3px 8px 3px 8px;
+    padding: 3px 0 3px 8px;
     text-align: left;
 }
 
@@ -68,9 +68,9 @@ header p {
     max-width: 310px;
     position: absolute;
     margin: auto;
-    top: -10%;
+    top: -100px;
     bottom: 0;
-    right: 55%;
+    right: 700px;
     left: 0;
     z-index: -1;
 }
@@ -79,9 +79,9 @@ header p {
     max-width: 455px;
     position: absolute;
     margin: auto;
-    top: 25%;
+    top: 200px;
     bottom: 0;
-    right: 14%;
+    right: 200px;
     left: 0;
     z-index: -1;
 }
@@ -91,25 +91,25 @@ header p {
     position: absolute;
     margin: auto;
     top: 0;
-    bottom: 30%;
+    bottom: 300px;
     right: 0;
-    left: 50%;
+    left: 640px;
     z-index: -1;
 }
 
 .light-image {
     position: absolute;
     margin: auto;
-    top: -5%;
+    top: -50px;
     left: 0;
-    right: 0;
+    right: 100px;
 }
 
 .diamonds-image {
     position: absolute;
     margin: auto;
-    top: 55%;
+    top: 520px;
     bottom: 0;
     left: 0;
-    right: 40%;
+    right: 590px;
 }
