--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 html, body {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
 }
 
 /* Typography ---------- */
@@ -20,8 +23,7 @@ p {
 .hero-container h1 {
     display: inline-block;
     padding: 0 8px 4px 8px;
-    margin-top: 200px;
-    background-color: #FFF;
+    margin-top: 160px;
 }
 
 .hero-paragraph {
@@ -47,7 +49,7 @@ p {
 }
 
 header {
-    padding: 30px 0 0 50px;
+    padding: 50px 0 0 70px;
 }
 
 header p {
@@ -65,7 +67,7 @@ header p {
 }
 
 .left-hero-image {
-    max-width: 310px;
+    max-width: 275px;
     position: absolute;
     margin: auto;
     top: -100px;
@@ -76,7 +78,7 @@ header p {
 }
 
 .center-hero-image {
-    max-width: 455px;
+    max-width: 370px;
     position: absolute;
     margin: auto;
     top: 200px;
@@ -87,7 +89,7 @@ header p {
 }
 
 .right-hero-image {
-    max-width: 373px;
+    max-width: 320px;
     position: absolute;
     margin: auto;
     top: 0;
@@ -98,6 +100,7 @@ header p {
 }
 
 .light-image {
+    max-width: 70px;
     position: absolute;
     margin: auto;
     top: -50px;
@@ -108,7 +111,7 @@ header p {
 .diamonds-image {
     position: absolute;
     margin: auto;
-    top: 520px;
+    top: 400px;
     bottom: 0;
     left: 0;
     right: 590px;
