--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,20 @@ p {
     font-size: 14px;
 }
 
+li {
+    font-size: 16px;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
 .hero-container h1 {
     display: inline-block;
     padding: 0 8px 4px 8px;
@@ -44,6 +58,7 @@ p {
 }
 
 .hero-container {
+    height: 100vh;
     text-align: center;
     animation: fadein 3s;
 }
@@ -94,13 +109,13 @@ header p {
     margin: auto;
     top: 0;
     bottom: 300px;
-    right: 0;
-    left: 640px;
+    right: -640px;
+    left: 0;
     z-index: -1;
 }
 
 .light-image {
-    max-width: 70px;
+    max-width: 56px;
     position: absolute;
     margin: auto;
     top: -50px;
@@ -115,4 +130,36 @@ header p {
     bottom: 0;
     left: 0;
     right: 590px;
+}
+
+.work-items-container h1 {
+    margin-top: 100px;
+    text-align: center;
+}
+
+.work-items-container ul {
+    margin-bottom: 100px;
+}
+
+.work-items-container a {
+    display: block;
+}
+
+.work-items-container li {
+    margin: 0 auto;
+    padding: 40px 20px;
+    max-width: 900px;
+    list-style: none;
+}
+
+.work-items-container li span:nth-child(2n) {
+    float: right;
+}
+
+.work-items-container i {
+    padding-left: 30px;
+}
+
+.work-items-container a:hover {
+    background-color: #eee;
 }
