--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,12 @@ header p {
     right: 590px;
 }
 
+.footer-image {
+    position: relative;
+    display: inherit;
+    margin: auto;
+}
+
 .work-items-container h1 {
     margin-top: 100px;
     text-align: center;
@@ -162,4 +168,10 @@ header p {
 
 .work-items-container a:hover {
     background-color: #eee;
+}
+
+footer {
+    height: 200px;
+    position: relative;
+    display: block;
 }
