--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html, body {
     -moz-box-sizing: border-box;
 }
 
-/* Typography ---------- */
+/* Typography ---------- ---------- ---------- */
 body {
     font-family: "Inconsolata", "Helvetica Neue", sans-serif;;
 }
@@ -57,11 +57,10 @@ a {
     text-align: left;
 }
 
-/* Layout ---------- */
+/* Layout ---------- ---------- ---------- */
 
 .outer-container {
     margin: 0 auto;
-    /*max-width: 1400px;*/
 }
 
 .hero-container {
@@ -92,7 +91,7 @@ header p {
     max-width: 275px;
     position: absolute;
     margin: auto;
-    top: -100px;
+    top: -80px;
     bottom: 0;
     right: 700px;
     left: 0;
@@ -103,7 +102,7 @@ header p {
     max-width: 400px;
     position: absolute;
     margin: auto;
-    top: 200px;
+    top: 220px;
     bottom: 0;
     right: 200px;
     left: 0;
@@ -114,7 +113,7 @@ header p {
     max-width: 340px;
     position: absolute;
     margin: auto;
-    top: 0;
+    top: 20px;
     bottom: 300px;
     right: -640px;
     left: 0;
@@ -158,11 +157,7 @@ header p {
     right: 590px;
 }
 
-.footer-image {
-    position: relative;
-    display: inherit;
-    margin: auto;
-}
+/* Work ---------- ---------- ---------- */
 
 .work-items-container h1 {
     margin-top: 100px;
@@ -196,8 +191,68 @@ header p {
     background-color: #eee;
 }
 
+/* Footer ---------- ---------- ---------- */
+
 footer {
+    margin-top: 200px;
     height: 200px;
     position: relative;
     display: block;
+}
+
+.footer-image {
+    position: relative;
+    display: inherit;
+    left: 44%;
+    display: inline-block;
+}
+
+
+.footer-right-rectangle {
+    background-color: #FFE9CD;
+    position: absolute;
+    bottom: -30px;
+    right: 0;
+    height: 300px;
+    width: 50%;
+    z-index: -99;
+}
+
+.footer-left-rectangle {
+    background-color: #EEE;
+    position: absolute;
+    bottom: -30px;
+    left: 0;
+    height: 180px;
+    width: 54%;
+    z-index: -99;
+}
+
+.footer-right-rectangle ul {
+    position: absolute;
+    bottom: 25%;
+    right: 35%;
+}
+
+.footer-left-rectangle a {
+    position: absolute;
+    display: inline-block;
+    bottom: 40%;
+    left: 35%;
+}
+
+.footer-right-rectangle li {
+    list-style: none;
+    margin: 10px 0;
+    cursor: pointer;
+}
+
+.footer-right-rectangle a {
+    min-width: 150px;
+    display: inline-block;
+}
+
+.footer-right-rectangle i {
+    padding-left: 40px;
+    float: right;
 }
