--- a/css/animations.css
+++ b/css/animations.css
@@ -18,3 +18,38 @@ April 2016
     0%    { opacity: 0; }
     100%  { opacity: 1; }
 }
+
+/*Simple Fade In Animation*/
+@-webkit-keyframes slideleft {
+    0%    { opacity: 0; }
+    100%  { opacity: 1; }
+}
+@-moz-keyframes slideleft {
+    0%    { opacity: 0; }
+    100%  { opacity: 1; }
+}
+@keyframes slideleft {
+    0%    { opacity: 0; }
+    100%  { opacity: 1; }
+}
+
+
+@-webkit-keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
