--- a/css/animations.css
+++ b/css/animations.css
@@ -21,23 +21,36 @@ April 2016
 
 /*Simple Slide Left Animation*/
 @-webkit-keyframes slideLeft {
-    100%  {-webkit-transform: translateX(15px);}
+    100%  {-webkit-transform: translateX(10px);}
 }
 @-moz-keyframes slideLeft {
-    100%  {-moz-transform: translateX(15px);}
+    100%  {-moz-transform: translateX(10px);}
 }
 @keyframes slideLeft {
-    100%  {transform: translateX(15px);}
+    100%  {transform: translateX(10px);}
+}
+
+/*Simple Slide Left Animation*/
+@-webkit-keyframes fadeInSlideLeft {
+    100%  {-webkit-transform: translateX(10px);}
+}
+@-moz-keyframes fadeInSlideLeft {
+    100%  {-moz-transform: translateX(10px);}
+}
+@keyframes fadeInSlideLeft {
+    0%    {opacity: 0;}
+    100%  {transform: translateX(10px);
+           opacity: 1;}
 }
 
 /*Simple Slide Left Animation*/
 @-webkit-keyframes slideRight {
-    0%  {-webkit-transform: translateX(15px);}
+    0%  {-webkit-transform: translateX(10px);}
 
 }
 @-moz-keyframes slideRight {
-    0%  {-moz-transform: translateX(15px);}
+    0%  {-moz-transform: translateX(10px);}
 }
 @keyframes slideRight {
-    0%  {transform: translateX(15px);}
+    0%  {transform: translateX(10px);}
 }
