--- a/css/animations.css
+++ b/css/animations.css
@@ -30,14 +30,35 @@ April 2016
     100%  {transform: translateX(10px);}
 }
 
-/*Simple Slide Left Animation*/
+/*Simple Slide Right Animation*/
 @-webkit-keyframes slideRight {
     0%  {-webkit-transform: translateX(10px);}
-
 }
 @-moz-keyframes slideRight {
     0%  {-moz-transform: translateX(10px);}
 }
 @keyframes slideRight {
     0%  {transform: translateX(10px);}
+}
+
+/* Simple Small Slide Left Animation*/
+@-webkit-keyframes slideLeftSm {
+    100%  {-webkit-transform: translateX(2px);}
+}
+@-moz-keyframes slideLeftSm {
+    100%  {-moz-transform: translateX(2px);}
+}
+@keyframes slideLeftSm {
+    100%  {transform: translateX(2px);}
+}
+
+/*Simple Small Slide Right Animation*/
+@-webkit-keyframes slideRightSm {
+    0%  {-webkit-transform: translateX(2px);}
+}
+@-moz-keyframes slideRightSm {
+    0%  {-moz-transform: translateX(2px);}
+}
+@keyframes slideRightSm {
+    0%  {transform: translateX(2px);}
 }
