--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,16 @@ header p {
     right: 0;
 }
 
+.arrow-image {
+    width: 40px;
+    position: relative;;
+    margin: auto;
+    top: 80px;
+    left: 150px;
+    right: 0;
+    animation: slideDown infinite 4s;
+}
+
 /* Work Section ----------------------------------- */
 
 .work-items-container h1 {
