--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,8 @@ i {
     background-repeat: no-repeat;
     margin-left: 30px;
     float: right;
+    top: 1px;
+    position: relative;
 }
 
 .hero-container h1 {
@@ -173,16 +175,15 @@ header p {
 
 .work-items-container-span-hover {
     display: inline-block;
-    font-family: "heading", "Helvectica Neue", serif;
-    font-size: 25px;
     animation: slideLeft 0.8s forwards;
 }
 
 .work-items-container li span:nth-child(2n) {
     display: none;
     position: relative;
-    top: -4px;
-    margin-left: 350px;
+    top: 1px;
+    margin-left: 400px;
+    padding-right: 50px;
     animation: 0.5s slideLeft forwards;
 }
 
@@ -197,11 +198,6 @@ header p {
 
 .work-items-container-third-span-hover {
     animation: slideLeft 0.8s forwards;
-    padding-top: 8px;
-}
-
-.work-items-container-li-hover {
-    padding: 32px 20px !important;
 }
 
 /* Footer ----------------------------------- */
