--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 /* Typography ----------------------------------- */
 
 body {
-    font-family: "Inconsolata", "Helvetica Neue", sans-serif;;
+    font-family: "Inconsolata", "Helvetica Neue", sans-serif;
 }
 
 h1 {
@@ -49,6 +49,7 @@ i {
     display: inline-block;
     padding: 0 8px 4px 8px;
     margin-top: 21vh;
+    animation: fadeIn 3s forwards;
 }
 
 @media (min-height: 815px) {
@@ -64,6 +65,7 @@ i {
     max-width: 290px;
     padding: 3px 0 3px 8px;
     text-align: left;
+    animation: fadeIn 1s forwards;
 }
 
 /* Layout ----------------------------------- */
@@ -75,7 +77,7 @@ i {
 .hero-container {
     height: 100vh;
     text-align: center;
-    animation: fadeIn 3s;
+    /*animation: fadeIn 3s;*/
 }
 
 header {
@@ -86,14 +88,18 @@ header p {
     text-align: left;
 }
 
+/* Hero Images ----------------------------------- */
+
 .hero-left-rectangle {
     background-color: #CAE6E0;
     position: absolute;
     top: 0;
-    left: 0;
+    left: -20px;
     height: 100vh;
     width: 50vw;
     z-index: -99;
+    display: inline-block !important;
+    animation: slideLeft 2s forwards;
 }
 
 .left-hero-image {
@@ -101,19 +107,23 @@ header p {
     margin: auto;
     top: -80px;
     bottom: 0;
-    right: 700px;
+    right: 740px;
     left: 0;
     z-index: -1;
+    display: inline-block !important;
+    animation: fadeInSlideLeft 0.4s forwards;
 }
 
 .center-hero-image {
     position: absolute;
     margin: auto;
-    top: 220px;
+    top: 280px;
     bottom: 0;
-    right: 200px;
+    right: 240px;
     left: 0;
     z-index: -1;
+    display: inline-block !important;
+    animation: fadeInSlideLeft 0.8s forwards;
 }
 
 .right-hero-image {
@@ -121,18 +131,22 @@ header p {
     margin: auto;
     top: 30px;
     bottom: 300px;
-    right: -640px;
+    right: -680px;
     left: 0;
     z-index: -1;
+    display: inline-block !important;
+    animation: fadeInSlideRight 1s forwards;
 }
 
 .lamp-image {
     max-width: 230px;
     position: absolute;
     margin: auto;
-    top: -36px;
+    top: -120px;
     left: 0;
     right: 0;
+    display: inline-block !important;
+    animation: fadeInSlideDown 1.5s forwards;
 }
 
 .arrow-image {
@@ -144,6 +158,9 @@ header p {
 }
 
 /* Work Section ----------------------------------- */
+.work-items-container {
+    animation: fadeIn 0.5s forwards;
+}
 
 .work-items-container h1 {
     padding-top: 100px;
@@ -157,6 +174,7 @@ header p {
 
 .work-items-container a {
     display: block;
+    transition: 0.2s;
 }
 
 .work-items-container li {
@@ -168,6 +186,7 @@ header p {
 
 .work-items-container a:hover {
     background-color: #EEE;
+    transition: 0.2s;
 }
 
 .work-items-container-span-hover {
@@ -193,10 +212,6 @@ header p {
     float: right;
 }
 
-.work-items-container-third-span-hover {
-    animation: slideLeft 0.8s forwards;
-}
-
 /* Footer ----------------------------------- */
 
 footer {
@@ -208,7 +223,7 @@ footer {
 
 .footer-image {
     position: relative;
-    left: 42%;
+    left: 41%;
     display: inline-block;
     z-index: 99;
     bottom: -5px;
@@ -218,19 +233,21 @@ footer {
 .footer-right-rectangle {
     background-color: #CAE6E0;
     position: absolute;
-    bottom: -55px;
+    bottom: -56px;
     right: 0;
     height: 300px;
     width: 50%;
+    animation: slideRight 1s forwards;
 }
 
 .footer-left-rectangle {
     background-color: #FFE9CD;
     position: absolute;
-    bottom: -55px;
-    left: 0;
+    bottom: -56px;
+    left: -20px;
     height: 180px;
     width: 54%;
+    animation: slideLeft 2s forwards;
 }
 
 .footer-text-container {
@@ -240,6 +257,7 @@ footer {
     bottom: 300px;
     padding: 40px 20px;
     margin: 0 auto;
+    animation: fadeIn 0.8s forwards;
 }
 
 .footer-text-container ul {
