--- a/css/main.css
+++ b/css/main.css
@@ -46,10 +46,12 @@ i {
 }
 
 .hero-container h1 {
+    opacity: 0;
     display: inline-block;
     padding: 0 8px 4px 8px;
     margin-top: 21vh;
-    animation: fadeIn 3s forwards;
+    animation: fadeIn 2s forwards;
+    animation-delay: 0.1s;
 }
 
 @media (min-height: 815px) {
@@ -59,13 +61,15 @@ i {
 }
 
 .hero-paragraph {
+    opacity: 0;
     display: block;
     line-height: 1.9;
-    margin: 30px auto 0 58%;
+    margin: 40px auto 0 58%;
     max-width: 290px;
     padding: 3px 0 3px 8px;
     text-align: left;
-    animation: fadeIn 1s forwards;
+    animation: fadeIn 0.8s forwards;
+    animation-delay: 0.5s;
 }
 
 /* Layout ----------------------------------- */
@@ -102,6 +106,7 @@ header p {
 }
 
 .left-hero-image {
+    opacity: 0;
     position: absolute;
     margin: auto;
     top: -80px;
@@ -111,9 +116,11 @@ header p {
     z-index: -1;
     display: inline-block !important;
     animation: fadeInSlideLeft 0.4s forwards;
+    animation-delay: 0.8s;
 }
 
 .center-hero-image {
+    opacity: 0;
     position: absolute;
     margin: auto;
     top: 280px;
@@ -123,9 +130,11 @@ header p {
     z-index: -1;
     display: inline-block !important;
     animation: fadeInSlideLeft 0.8s forwards;
+    animation-delay: 0.8s;
 }
 
 .right-hero-image {
+    opacity: 0;
     position: absolute;
     margin: auto;
     top: 30px;
@@ -134,10 +143,12 @@ header p {
     left: 0;
     z-index: -1;
     display: inline-block !important;
-    animation: fadeInSlideRight 1s forwards;
+    animation: fadeInSlideRight 0.8s forwards;
+    animation-delay: 0.8s;
 }
 
 .lamp-image {
+    opacity: 0;
     max-width: 230px;
     position: absolute;
     margin: auto;
@@ -146,13 +157,20 @@ header p {
     right: 0;
     display: inline-block !important;
     animation: fadeInSlideDown 1.5s forwards;
+    animation-delay: 0.3s;
+}
+
+.hero-container figure {
+    position: relative;
+    top: 30px;
+    left: 185px;
+    opacity: 0;
+    animation: fadeInSlideDown 1s forwards;
+    animation-delay: 2s;
 }
 
 .arrow-image {
     width: 30px;
-    position: relative;
-    top: 60px;
-    left: 185px;
     animation: slideUpAndDown infinite 3s;
 }
 
